change auth requestMatchers to adding /api/**