@@ -25,7 +25,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -52,7 +51,7 @@ public class SecurityConfig {
 
         http
                 .authorizeHttpRequests((auth) -> auth
-                        .requestMatchers("/", "/oauth2/reissue").permitAll()
+                        .requestMatchers("/", "/oauth2/reissue", "/api/**").permitAll()
                         .anyRequest().authenticated());
 
         //CORS 설정
@@ -64,7 +63,7 @@ public class SecurityConfig {
                                 CorsConfiguration configuration = new CorsConfiguration();
 
                                 //요청 허용하는 오리진 설정
-                                configuration.setAllowedOrigins(List.of("https://maeilmail.co.kr"));
+                                configuration.setAllowedOrigins(Collections.singletonList(FRONT_ADDRESS));
 
                                 //허용하는 요청 종류(Get, Post...) 설정
                                 configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
